--- a/index.html
+++ b/index.html
@@ -9,152 +9,125 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/header-logo.svg" alt="здесь должна быть картинка">
+      <img class="header__logo" src="./images/header-logo.svg" alt="карта России">
       <ul class="header__lang">
-        <li class="header__lang-link header__lang-link_active">Ru</li>
-        <li class="header__lang-link header__lang-link_lang_en">En</li>
+        <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
+        <li><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="здесь должна быть картинка">
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="полка вагона поезда">
         <p class="lead__caption">ваша полка - верхняя</p>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list list">
-          <li class="intro__list-info">Часовых поясов <span class="intro__list-info intro__list-info_weight_thin">11</span></li>
-          <li class="intro__list-info">Объектов природного наследия ЮНЕСКО <span class="intro__list-info intro__list-info_weight_thin">12</span></li>
-          <li class="intro__list-info">Объектов культурного наследия ЮНЕСКО <span class="intro__list-info intro__list-info_weight_thin">16</span></li>
-          <li class="intro__list-info">Природных заповедников <span class="intro__list-info intro__list-info_weight_thin">105</span></li>
-          <li class="intro__list-info">Аэропортов <span class="intro__list-info intro__list-info_weight_thin">241</span></li>
+          <li class="intro__list-info">Часовых поясов <span class="intro__list-thin">11</span></li>
+          <li class="intro__list-info">Объектов природного наследия ЮНЕСКО <span class="intro__list-thin">12</span></li>
+          <li class="intro__list-info">Объектов культурного наследия ЮНЕСКО <span class="intro__list-thin">16</span></li>
+          <li class="intro__list-info">Природных заповедников <span class="intro__list-thin">105</span></li>
+          <li class="intro__list-info">Аэропортов <span class="intro__list-thin">241</span></li>
         </ul>
       </section>
       <section class="photo-grid">
-        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="здесь должна быть картинка">
-        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="здесь должна быть картинка">
+        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="окно поезда">
+        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="облака и горы">
+        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="собака стог сена рассвет">
+        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="лес в тумане">
+        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="колесо автомобиля и лед">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="берег моря горы">
+        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="горные пики в снегу">
+        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="пешеходный знак">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="сопки в тумане">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="тайга и горная вершина">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="холмистый берег">
+        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="туман земля трава">
       </section>
       <section class="places">
         <article class="place">
-          <div class="place__heading">
-            <h2 class="place__title">Куршская коса</h2>
-            <ul class="place__website list">
-              <li class="place__url-heading">URL</li>
-              <li><a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a></li>
-            </ul>
+          <h2 class="place__title">Куршская коса</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
-          <div class="two-columns">
-            <div class="two-columns__main">
-              <img class="place__image" src="./images/place-kosa.jpg" alt="здесь должна быть картинка">
-            </div>
-            <div class="two-columns__info">
-              <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
-            </div>
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса залив">
+          <div class="place__info">
+            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
           </div>
         </article>
         <article class="place">
-          <div class="place__heading">
-            <h2 class="place__title">Кольский</h2>
-            <ul class="place__website list">
-              <li class="place__url-heading">URL</li>
-              <li><a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></li>
-            </ul>
+          <h2 class="place__title">Кольский</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
-          <div class="two-columns">
-            <div class="two-columns__main">
-              <img class="place__image" src="./images/place-kolsky.jpg" alt="здесь должна быть картинка">
-            </div>
-            <div class="two-columns__info">
-              <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-              <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
-            </div>
+          <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский полуостров снег">
+          <div class="place__info">
+            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
           </div>
         </article>
         <article class="place">
-          <div class="place__heading">
-            <h2 class="place__title">Алтай</h2>
-            <ul class="place__website list">
-              <li class="place__url-heading">URL</li>
-              <li><a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a></li>
-            </ul>
+          <h2 class="place__title">Алтай</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
           </div>
-          <div class="two-columns">
-            <div class="two-columns__main">
-              <img class="place__image" src="./images/place-altai.jpg" alt="здесь должна быть картинка">
-            </div>
-            <div class="two-columns__info">
-              <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-              <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
-            </div>
+          <img class="place__image" src="./images/place-altai.jpg" alt="Алтай лес ноутбук">
+          <div class="place__info">
+            <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
         </article>
         <article class="place">
-          <div class="place__heading">
-            <h2 class="place__title">Зимний Байкал</h2>
-            <ul class="place__website list">
-              <li class="place__url-heading">URL</li>
-              <li><a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a></li>
-            </ul>
+          <h2 class="place__title">Зимний Байкал</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
-          <div class="two-columns">
-            <div class="two-columns__main">
-              <img class="place__image" src="./images/place-winter-baikal.jpg" alt="здесь должна быть картинка">
-            </div>
-            <div class="two-columns__info">
-              <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-              <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
-            </div>
+          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал лед узор">
+          <div class="place__info">
+            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
         </article>
         <article class="place">
-          <div class="place__heading">
-            <h2 class="place__title">Карелия</h2>
-            <ul class="place__website list">
-              <li class="place__url-heading">URL</li>
-              <li><a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a></li>
-            </ul>
+          <h2 class="place__title">Карелия</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
-          <div class="two-columns">
-            <div class="two-columns__main">
-              <img class="place__image" src="./images/place-karelia.jpg" alt="здесь должна быть картинка">
-            </div>
-            <div class="two-columns__info">
-              <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-            </div>
+          <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия река лес">
+          <div class="place__info">
+            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
         </article>
       </section>
       <section class="cover">
-        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-        <div class="cover__overlay"></div>
-        <img class="cover__background" src="./images/cover-trains.jpg" alt="здесь должна быть картинка">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+          <img class="cover__background" src="./images/cover-trains.jpg" alt="железнодорожные пути, закат, город">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </a>
       </section>
     </main>
-    <section class="footer">
-      <ul class="footer__link-list">
-        <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-        <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-        <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-        <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-        <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
-      </ul>
+    <footer class="footer">
+      <nav>
+        <ul class="footer__link-list">
+          <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+        </ul>
+      </nav>
       <p class="footer__copyright">&copy; 2022. Оксана Каменчук</p>
-    </section>
+    </footer>
   </div>
 </body>
 </html>
